# upheno

./: .gitignore  .travis.yml  404.html  CONTRIBUTING.md  Jenkinsfile  Makefile  README  README.md  catalog-v001.xml  chebi_import.owl  doid_import.owl  extra.owl  fma_import.owl  go_import.owl  go_phenotype.owl  hsapdv_import.owl  imports_requests.obo  index.html  mammal.owl  metazoa.owl  mismatched-xp.txt  mkdocs.yaml  mp-hp-kboom.owl  mp-hp.owl  mp_hp-align-equiv-labeled.obo  mp_hp-align-equiv.obo  mp_hp-align-equiv.owl  mp_hp-disjoint_from.obo  mpath_import.obo  mpath_import.owl  mpath_phenotype.owl  nbo_import.owl  nbo_phenotype.owl  pato_import.owl  pr_import.owl  quality_control.pro  requirements.txt  ro_extra.owl  ro_import.obo  ro_import.owl  (+11 more)
about/: index.html
alignment/: Makefile  ignore_word_phenotype.pro  symp-ALL-intermatch.tsv  symp-ALL-unmatched.tsv  symp-HP-intermatch.tsv  symp-HP-unmatched.tsv
archive/: mp-hp.owl
cite/: index.html
contributing/: index.html
docs/: CrossSpeciesPhenotypeOntology.md  DPO.md  DiseaseIntegration.md  FYPO.md  HP.md  Imports.md  InferenceOfAbnormal.md  LogicalDefinitions.md  MP.md  OWLAxiomatization.md  PATO.md  PhenotypeModelCompetencyQuestions.md  README.md  ZP.md  about.md  cite.md  contributing.md  history.md  index.md  pipeline.md  wip-for-nico.md
dpo/: dpo-bridge.owl
hp-mp/: Makefile  README  ambiguous.tsv  mismatched-xp.txt  mp-hp-equivalent-2019-02-13.csv  mp_hp-align-equiv-flipped.txt  mp_hp-align-equiv-labeled.obo  (+4 more)
src/scripts/upheno/: pyproject.toml
src/scripts/upheno/src/upheno/: cli.py  upheno_utils.py
(+2731 files in other folders)
