[tool.poetry]
name = "upheno"
version = "0.1.0"
description = ""
authors = ["Nico Matentzoglu <nicolas.matentzoglu@gmail.com>", "Vinícius de Souza <souzadevinicius@gmail.com>"]
readme = "README.md"
packages = [{include = "upheno", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
jaydebeapi = ">=1.2.3"
tqdm = ">=4.64.1"
pandas = ">=1.5.1"
deprecation = ">=2.1.0"
click = ">=8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.scripts]
pheval = "upheno.cli:upheno"
upheno-utils = "upheno.cli:upheno_utils"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
